@@ -1,3 +1,8 @@
+2010-02-04  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* providerDrv.c, elementCapabilitiesProvider.c:
+	Cleaned up unused vars
+
 2010-02-02  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* providerRegister.c:
